# UtilsLite

./: .gitignore  CMakeLists.txt  README.md  Rakefile  format_cpp.rb  license.txt
.github/workflow/: ci.yml
ThirdParties/: .gitignore  Rakefile
ThirdParties/BS_thread_pool/: Rakefile
ThirdParties/Eigen/: Rakefile
ThirdParties/autodiff/: Rakefile
ThirdParties/fmt/: Rakefile
ThirdParties/spdlog/: Rakefile
ThirdParties/task_thread_pool/: Rakefile
doc_generate/: Doxyfile_custom  conf.py  index.md  index_CPP.md  rang.md
docs/: _c_p_uinfo_8cc.html  _console_8cc.html  _l_i_c_e_n_s_e_8md.html  _malloc_8cc.html  _numbers_8cc.html  _system_utils_8cc.html  _table_8cc.html  _thread_pool1_8cc.html  _thread_pool2_8cc.html  _thread_pool3_8cc.html  _thread_pool4_8cc.html  _thread_pool5_8cc.html  _thread_utils_8cc.html  _tic_toc_8cc.html  _token_8cc.html  _trace_8cc.html  _utils_8cc.html  _utils_8hh.html  _utils_8hh_source.html  _utils___a_a_b_b__tree_8cc.html  _utils___a_a_b_b__tree_8hh.html  _utils___a_a_b_b__tree_8hh.js  _utils___a_a_b_b__tree_8hh_source.html  _utils___algo748_8cc.html  _utils___algo748_8hh.html  _utils___algo748_8hh.js  _utils___algo748_8hh_source.html  _utils___c_p_u__info_8hh.html  _utils___c_p_u__info_8hh.js  _utils___c_p_u__info_8hh_source.html  _utils___g_g2_d_8cc.html  _utils___g_g2_d_8hh.html  _utils___g_g2_d_8hh.js  _utils___g_g2_d_8hh_source.html  _utils___h_j_pattern_search_8cc.html  _utils___h_j_pattern_search_8hh.html  _utils___h_j_pattern_search_8hh.js  _utils___h_j_pattern_search_8hh_source.html  _utils___nelder_mead_8cc.html  _utils___nelder_mead_8cc.js  (+201 more)
docs/d0/d07/: _c_p_uinfo_8cc.html
docs/d0/d0c/: _numbers_8cc.html
docs/d0/d1c/: class_utils_1_1_quaternion-members.html
docs/d0/d29/: class_utils_1_1_table_1_1_row.html  class_utils_1_1_table_1_1_row.js
docs/d0/d7e/: class_utils_1_1_thread_pool3.html  class_utils_1_1_thread_pool3.js
docs/d0/d81/: classquickpool_1_1mem_1_1aligned_1_1allocator.html  (+1 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+108 more)
docs_build/sphinx/: conf.py
doxygen/: Makefile  doxyfile_utils  main.hh  main.md  rang.md
latex/: BOBYQA.f90  BOBYQA4.f90  funzioni_test.tex  newton_dumped.tex  sensitivity-beamer.tex  sensitivity.tex
matlab_tests/: CMakeLists.txt
matlab_tests/src/: TestClass.cc  TestClass.hh
matlab_tests/src_mex/: mex_AABB_tree.cc  mex_Segment2D.cc
matlab_tests/tests/: DiskList.m  test1_HJ.m  test2.m  test2_HJ.m  test3.m  test4.m  test5.m  test_AABB1.m  test_AABB2.m  test_AABB3.m  test_AABB4.m  test_AABB5.m  test_AABB6.m  test_HJ1.m  test_HJ2.m  test_Minimize1D.m  test_NM0.m  test_NM1.m  test_NM2.m  test_NM3.m  test_NM4.m  test_Poly.m  test_Sturm6.m  test_algo748.m  test_fun0.m  test_fun1.m  test_fun1_barrier.m  test_fun2.m  test_fun2_barrier.m  test_fun_han.m  test_fun_han2.m
matlab_tests/tests/test-data/: veins.msh
src/: 3rd_rang.cc  CPUinfo.cc  Console.cc  Malloc.cc  Numbers.cc  SystemUtils.cc  SystemUtils_linux.cxx  SystemUtils_osx.cxx  SystemUtils_win32.cxx  Table.cc  ThreadPool2.cc  ThreadPool3.cc  ThreadPool4.cc  ThreadPool5.cc  ThreadUtils.cc  Trace.cc  Utils.cc  Utils_AABB_tree.cc  Utils_AABB_tree.hh  Utils_Algo748.cc  Utils_Algo748.hh  Utils_AlgoBracket.cc  Utils_AlgoBracket.hh  Utils_AlgoHNewton.cc  Utils_AlgoHNewton.hh  Utils_BOBYQA.hh  Utils_CLI11.hh  Utils_CPU_info.hh  Utils_DifferentialEvolution.hh  Utils_GG2D.cc  Utils_GG2D.hh  Utils_HJPatternSearch.cc  Utils_HJPatternSearch.hh  Utils_IncrementalLevenbergMarquardt.hh  Utils_LBFGS.hh  Utils_LBFGS_minimize.hh  Utils_Linesearch.hh  Utils_MADS.hh  Utils_NelderMead.cc  Utils_NelderMead.hh  (+37 more)
src/Utils/: Console.hxx  Malloc.hxx  Numbers.hxx  Quaternion.hxx  Table.hxx  ThreadPool0.hxx  ThreadPool1.hxx  ThreadPool2.hxx  ThreadPool3.hxx  ThreadPool4.hxx  ThreadPool5.hxx  ThreadPool6.hxx  ThreadPoolBase.hxx  ThreadUtils.hxx  TicToc.hxx  Token.hxx  Utils.hxx  mex_utils.hxx  rang.hxx
src/Utils_nonlinear_system/: ArtificialTestOfNowakAndWeimann.cxx  BUNLSI.cxx  BadlyScaledAugmentedPowellFunction.cxx  Beale.cxx  Bertolazzi.cxx  BiggsEXPfunctions.cxx  BoggsFunction.cxx  Bohachevsky.cxx  Box3.cxx  BoxAndBettsExponentialQuadraticSum.cxx  BoxProblem.cxx  BraninRCOS.cxx  BrownAlmostLinearFunction.cxx  BrownAndConteFunction.cxx  BrownAndDennis.cxx  BrownAndGearhartFunction.cxx  BrownBadlyScaled.cxx  BrownFunction.cxx  BroydenBandedFunction.cxx  BroydenTridiagonalFunction.cxx  BurdenAndFaires.cxx  Chandrasekhar.cxx  ChebyquadFunction.cxx  ChemicalEquilibriumApplication.cxx  CliffFunction.cxx  Colville.cxx  CombustionApplication.cxx  ComplementaryFunction.cxx  CompressibilityFactorFromTheRKequation.cxx  CountercurrentReactorsProblem.cxx  CraggAndLevyProblem.cxx  CubeFunction.cxx  DarvishiBarati.cxx  DeVilliersGlasser.cxx  DeistSefor.cxx  DennisAndGay.cxx  DennisAndSchnabel2x2example.cxx  DiagonalFunctionMulQO.cxx  DiscreteBoundaryValueFunction.cxx  DiscreteIntegralEquationFunction.cxx  (+81 more)
src_tests/: 1D_fun.cxx  ND_func.cxx  ND_func_grad.cxx  test_AABB_tree.cc  test_Algo748.cc  test_AlgoBracket.cc  test_AlgoHNewton.cc  test_Autodiff.cc  test_BOBYQA.cc  test_Console.cc  test_DifferentialEvolution.cc  test_HJ.cc  test_IncrementalLevenbergMarquardt.cc  test_LBFGS.cc  test_Linesearch.cc  test_MADS.cc  test_Malloc.cc  test_MatrixMultThreadpool.cc  test_NelderMead.cc  test_NewtonDumped.cc  test_NonlinearKaczmarz.cc  test_Pareto.cc  test_Poly.cc  test_Quaternion.cc  test_SHA3.cc  test_SPSA.cc  test_Sturm.cc  test_SubspaceNewton.cc  test_System.cc  test_TVD.cc  test_Thread.cc  test_ThreadPool.cc  test_ThreadPool0.cc  test_Tikhonov.cc  test_Trichotomy.cc  test_TrustRegion.cc  test_Zeros.cc  test_eigen.cc  test_fmt.cc  test_minimize_BOBYQA.cc  (+24 more)
(+406 files in other folders)
